tests/NormalTests/paczka1/fuzzy1/87979616.err
Error in line 5: 4Fk2PzBQ S297 92,48
Error in line 11: S432 S361 16,9
Error in line 14: S432 S432 55,4
Error in line 18: qw51FY S432 53,4
Error in line 16: S432 S297 13,0
Error in line 24: VdVdNpsLfZ7 S361 55,0
Error in line 33: WooIB S185 32,04
Error in line 37: YLGhQAuf S185 1,0
